# SAT_Solver

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  Solver_Stats.cpp  Solver_Stats.h  clause.cpp  clause.h  clauseRef.cpp  clauseRef.h  dpll.cpp  dpll.h  encoding_util.cpp  encoding_util.h  io_utils.cpp  io_utils.h  main.cpp  sat_checker.py  solver.cpp  solver.h  solver_structs.cpp  solver_structs.h  variable_order.cpp  variable_order.h  vcpkg.json
benchmark_scripts/: benchmark.py  benchmark_gpt.py  benchmark_new.py
example_dimacs/: example1.cnf  randkcnf.sh  random_10_5.cnf  random_10_5.cnf.sol  random_10_5.cnf.wrong_sol  simple_unsat.cnf  unit_propagation_test_1.cnf  unit_propagation_test_2_after.cnf  unit_propagation_test_2_before.cnf  unit_test_import.cnf  unit_test_parse_multiple_lines.cnf  unit_test_parse_soeren_dimacs.cnf
lorina_include/lorina/: dimacs.hpp
pretty_printer/: pretty_print.py
sat_checker/: CMakeLists.txt  checker.cpp
test/: CMakeLists.txt  test.cpp  test_util.h
